cambio de pagina index y jonathan.html y jonathan.cc

--- a/jonathan.html
+++ b/jonathan.html
@@ -3,11 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="jonathan.css">
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>Soy jonathan </h1>
-    <p>Ver si van ddos index</p>
+    <div class="titulo">
+        <h1>Estructuras y Modificación del dom parte 2</h1>
+        <p>Etiquetas y Classlist</p>
+    </div>
+    <div class="contenedor">
+        <div class="contenido_etiquetas">
+            <h4><strong>Contenido de Etiquetas</strong></h4>
+            <p>Si tenemos elementos HTML y queremos modificar su contenido, podemos hacerlo desde Javascript desde ciertas propiedades de elementos del DOM.</p>
+            <p></p>
+        </div>
+        <div class="classlist">
+            <h4><strong>Classlist</strong></h4>
+            <p>Objeto especial para manejar clases CSS. Contiene métodos y propiedades de ayuda.
+            </p>
+            <p></p>
+        </div>
+    </div>
 </body>
 </html>
