añado pagina sy cambios

--- a/jonathan.html
+++ b/jonathan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="jonathan.css">
+    <link rel="stylesheet" href="/css/jonathan.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,17 +12,36 @@
         <p>Etiquetas y Classlist</p>
     </div>
     <div class="contenedor">
-        <div class="contenido_etiquetas">
+        <div class="contenido">
             <h4><strong>Contenido de Etiquetas</strong></h4>
             <p>Si tenemos elementos HTML y queremos modificar su contenido, podemos hacerlo desde Javascript desde ciertas propiedades de elementos del DOM.</p>
             <p></p>
         </div>
-        <div class="classlist">
-            <h4><strong>Classlist</strong></h4>
-            <p>Objeto especial para manejar clases CSS. Contiene métodos y propiedades de ayuda.
-            </p>
-            <p></p>
+    </div>
+    <div class="flechas">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="">
+    </div>
+    <div class="sub">
+        <div class="contenido">
+            <h4><strong>.textContent</strong></h4>
         </div>
+        <div class="contenido">
+            <h4><strong>.innerText .outerText</strong></h4>
+        </div>
+        <div class="contenido">
+            <h4><strong>.innerHTML</strong></h4>
+        </div>
+        <div class="contenido">
+           <h4><strong>.outerHTML</strong></h4>
+        </div>
+        <div class="contenido">
+            <h4><strong>setHTML()</strong></h4>
+        </div>
+
     </div>
 </body>
 </html>
