--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!----animacion guapa de letras-->
     <header class="background-main">
         <main class="main">
-            <h1 class="main-title">Grupo A
+            <h1 id="page-top" class="main-title">Grupo A
                 <a href="" class="typewrite" data-period="2000" data-type='[ "lista de clases", "Etiquetas", "Sintaxis", "Atributos del Dom" ]'>
                     <span class="wrap"></span>
                 </a>
@@ -53,14 +53,14 @@
         </main>
         
         <div class="text-center">
-            <a class="main-link btn btn-lg"  href="">
+            <a id="about" class="main-link btn btn-lg"  href="">
                 Ver más
                 <i class="fa fa-chevron-down"></i>
             </a> 
         </div>
     </header>
     
-    <section class="about-us" id="about">
+    <section class="about-us" >
         <div class="container">
             <div class="text-center">
                 <h2>Proyecto</h2>
@@ -120,7 +120,7 @@
     </section>
     <br>
     <div class="container text-center" id="portfolio">
-            <h2 class="portfolio-title">Portfolio</h2>
+            <h2 class="portfolio-title">Desarrolladores</h2>
             <div class="line-shape"></div>
     </div>
 
