--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                     <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-                <a href="ana.html" class="mb-3">Joni</a>
+                <a href="jhonny.html" class="mb-3">Joni</a>
                 <p class="text-muted mb-0"> <strong>Metodo de selección de elementos</strong></p>
 
                 </div>
