agrego juego y termino metodos de acceso

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#portfolio">Desarrolladores</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="juego.html">Juguemos</a>
+                        </li>
                    
                 </ul>
             </div>
