--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link js-scroll-trigger" href="#portfolio">Desarrolladores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="juego.html">Juguemos</a>
+                        <a class="nav-link js-scroll-trigger" href="juego2.html">Juguemos</a>
                         </li>
                    
                 </ul>
