--- a/jonathan.html
+++ b/jonathan.html
@@ -11,7 +11,7 @@
 <body>
     <div class="titulo">
         <h1>Estructuras y Modificación del dom parte 2</h1>
-        <p>Etiquetas y Classlist</p>
+        <p>Etiquetas</p>
     </div>
     <div class="contenedor_definicion">
         <div class="flecha">
@@ -91,7 +91,7 @@
         </div>
         
 
-<!--
+
         <div class="contenedor_1">
             <div class="flecha">
                 <img src="/Galeria/Fotos equipo/flecha india.png" alt="flecha india">
@@ -185,7 +185,83 @@
                 <img src="/Galeria/Fotos equipo/sethtmljava.png" alt="(codigo_practica_textcontent)">
             </div>
 
-        </div>-->
+        </div>
+
+    </div>
+    <div class="flecha">
+       
+    </div>
+
+    <div class="titulo">
+        <h1>Estructuras y Modificación del dom parte 2</h1>
+        <p>Classlist</p>
+    </div>
+    <div class="contenedor_definicion">
+        <div class="flecha">
+            <img src="/Galeria/Fotos equipo/flecha india.png" alt="flecha india">
+        </div>
+        <div class="definición">
+            <p>Objeto especial para manejar clases CSS. 
+                Contiene métodos y propiedades de ayuda.
+            </p>
+        </div>
+    </div>
+    <div class="flecha">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="flecha india">
+    </div>
+    <div class="html_image">
+        <img src="/Galeria/Fotos equipo/html classlist.png" alt="(codigo_practica_textcontent)">
+    </div>
+    <div class="flecha">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="flecha india">
+    </div>
+    <div class="lista_claslist">
+        <div class="especifico">
+            <h1>add( String [, String] )</h1>
+            <p>Añade las clases indicadas. Si estas clases existieran en el atributo del elemento serán ignoradas.</p>
+        </div>
+        <div class="especifico">
+            <h1>remove( String [, String] )</h1>
+            <p>Elimina las clases indicadas. Nota: Eliminar una clase que no existe NO produce un error.</p>
+        </div>
+        <div class="especifico">
+            <h1>item( Number )</h1>
+            <p>Devuelve el valor de la clase por índice en la colección.</p>
+        </div>
+        <div class="especifico">
+            <h1>toggle( String [, force] )</h1>
+            <p>Cuando sólo hay un argumento presente:
+                 Alterna el valor de la clase; ej.,
+                  si la clase existe la elimina y devuelve false,
+                   si no, la añade y devuelve true.
+                    Cuando el segundo argumento está presente:
+                     Si el segundo argumento se evalúa como true,
+                      se añade la clase indicada, 
+                      y si se evalúa como false, la elimina.</p>
+        </div>
+        <div class="especifico">
+            <h1>contains( String )</h1>
+            <p>Comprueba si la clase indicada existe en el atributo de clase del elemento.</p>
+        </div>
+        <div class="especifico">
+            <h1>replace( oldClass, newClass )</h1>
+            <p>Reemplaza una clase existente por una nueva.</p>
+        </div>
+    </div>
+
+    <div class="lista_claslist">
+        <div class="especifico">
+            <h3>
+                Acceder a clases CSS
+            </h3>
+            <p>
+                Al margen de acceder a la lista de clases mediante .classList 
+                y al número de clases del elemento con .classList.length,
+                 es posible acceder a la propiedad 
+                 .classList.values para obtener un  como lo haría .className:
+            </p>
+
+        </div>
 
     </div>
 
