agrego enlace de ibañez

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                     <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-                <a href="jonathan.html" class="mb-3">Rayan</a>
-                <p class="text-muted mb-0"><Strong>Definición</Strong> y <strong>Objetos globales</strong></p>
+                <a href="jonathan.html" class="mb-3">Jonathan Ibañez</a>
+                <p class="text-muted mb-0"><Strong>Definición</Strong> y <strong>...</strong></p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
@@ -106,7 +106,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                 <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-                <h3 class="mb-3">Andres y Jonathan Ibañez</h3>
+                <h3 class="mb-3">Andres y </h3>
                 <p class="text-muted mb-0"><strong>Cambiar</strong>y <strong>modificar el DOM</strong></p>
                 </div>
             </div>
