--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box mt-5 mx-auto">
                     <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-                <h3 class="mb-3">Ana</h3>
+                    <a href="ana.html" class="mb-3">Ana</a>
                 <p class="text-muted mb-0"><strong>Sintaxis</strong></p>
                 </div>
             </div>
