--- a/jonathan.html
+++ b/jonathan.html
@@ -248,7 +248,9 @@
             <p>Reemplaza una clase existente por una nueva.</p>
         </div>
     </div>
-
+    <div class="flecha">
+        <img src="/Galeria/Fotos equipo/flecha india.png" alt="flecha india">
+    </div>
     <div class="lista_claslist">
         <div class="especifico">
             <h3>
@@ -261,8 +263,54 @@
                  .classList.values para obtener un  como lo haría .className:
             </p>
 
+            <img src="/Galeria/Fotos equipo/imagen 1.png" alt="">
         </div>
+        <div class="especifico">
+            <h3>
+                Añadir y eliminar clases CSS
+            </h3>
+            <p>
+                Los métodos .classList.add() y .classList.remove() permiten indicar una o múltiples clases CSS 
+                a añadir o eliminar. Observa el siguiente código donde se ilustra un ejemplo:
+            </p>
 
+            <img src="/Galeria/Fotos equipo/imagen2.png" alt="">
+        </div>
+        <div class="especifico">
+            <h3>
+                Comprobar si existen clases CSS
+            </h3>
+            <p>
+                Con el método .classList.contains() podemos comprobar si existe una clase en un elemento HTML,
+                 ya que nos devuelve un  indicandonos si está presente o no:
+            </p>
+
+            <img src="/Galeria/Fotos equipo/imagen3.png" alt="">
+        </div>
+        <div class="especifico">
+            <h3>
+                Conmutar o alternar clases CSS
+            </h3>
+            <p>
+                Otro ayudante muy interesante es el del método .classList.toggle(),
+                 que lo que hace es añadir o eliminar la clase CSS dependiendo de si ya existía previamente. 
+                 Es decir, añade la clase si no existía previamente o elimina la clase si existía previamente:o:
+            </p>
+
+            <img src="/Galeria/Fotos equipo/imagen4.png" alt="">
+        </div>
+        <div class="especifico">
+            <h3>
+                Reemplazar una clase CSS
+            </h3>
+            <p>
+                Por último, tenemos un método .classList.replace() 
+                que nos permite reemplazar la primera clase indicada por parámetro,
+                 por la segunda. Veamos este método en acción:
+            </p>
+
+            <img src="/Galeria/Fotos equipo/imagen5.png" alt="">
+        </div>
     </div>
 
 
