--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box mt-5 mx-auto">
                         <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-                    <a href="jonathan.html" class="mb-3">Andres</a>
+                    <a href="an" class="mb-3">Andres</a>
                     <p class="text-muted mb-0"> <strong>Metodo de selección de elementos</strong></p>
     
                     </div>
