--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="service-box mt-5 mx-auto">
                             <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
                         <a href="javaAndres.html" class="mb-3">Andres</a>
-                        <p class="text-muted mb-0"> <strong>Metodo de selección de elementos</strong></p>
+                        <p class="text-muted mb-0"> <strong>DOM Atributos y CSS</strong></p>
         
                         </div>
                     </div>
