--- a/jhonny.html
+++ b/jhonny.html
@@ -395,10 +395,11 @@
                                 <br><br><span style="color: rgb(87, 20, 148);">addEventListener: </span>  Agrega un evento a un elemento para manejar interacciones del usuario.
                         </p>
                     </div> 
-                   
-                        <iframe src="manipulacion.html" width="600" height="200" frameborder="0" allowfullscreen></iframe>
-                        <iframe src="js/manipulacion.js" width="600" height="200" frameborder="0" allowfullscreen></iframe>
-                </div>
+                        <div class="frame2">
+                                <iframe src="manipulacion.html" width="600" height="200" frameborder="0" allowfullscreen></iframe>
+                                <iframe src="js/manipulacion.js" width="600" height="200" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                    </div>
 
                                      
             </article>
